--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -27,8 +27,13 @@
 						}).controller("home", function($http, $location) {
 					var self = this;
 					$http.get("/user").success(function(data) {
-						self.user = data.userAuthentication.details.name;
-						self.authenticated = true;
+						if (data.name) {
+							self.user = data.name;
+							self.authenticated = true;
+						} else {
+							self.user = "N/A";
+							self.authenticated = false;
+						}
 					}).error(function() {
 						self.user = "N/A";
 						self.authenticated = false;
@@ -58,7 +63,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right" ng-show="!home.authenticated">
       		<li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      		<li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      		<li><a href="/login/github"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
     	  </ul>
           <ul class="nav navbar-nav navbar-right" ng-show="home.authenticated">
       		<li><a href="/profile"><span ng-bind="home.user"></span></a></li>
