--- a/src/main/resources/templates/organizations.html
+++ b/src/main/resources/templates/organizations.html
@@ -55,8 +55,8 @@
           </div>
         </div>
       </div>
-	  <!-- <div class="row">
-	    <div class="col-sm-3 col-md-1">
+	  <div class="row">
+	    <div class="col-sm-6 col-md-5">
 	      <div class="thumbnail">
 	        <img src="../static/images/NrityapanaSchoolofPerformingArts.png" />
 	        <div class="caption">
@@ -65,7 +65,27 @@
           </div>
         </div>
       </div>
-    </div> -->
+      <div class="row">
+	    <div class="col-sm-6 col-md-5">
+	      <div class="thumbnail">
+	        <img src="../static/images/NrityapanaSchoolofPerformingArts.png" />
+	        <div class="caption">
+              <h3 th:text="${venue.venueName}"></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+	    <div class="col-sm-6 col-md-5">
+	      <div class="thumbnail">
+	        <img src="../static/images/NrityapanaSchoolofPerformingArts.png" />
+	        <div class="caption">
+              <h3 th:text="${venue.venueName}"></h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     
 	<hr/><br/>
     <div class="container">
