--- a/src/main/resources/templates/completePurchase.html
+++ b/src/main/resources/templates/completePurchase.html
@@ -44,20 +44,8 @@
 
 	<br/><br/><br/><br/><br/><br/>
 
-	<div class="container">
-	  <div class="row">
-	    <div class="col-sm-6 col-md-4" th:each="event : ${events}">
-	      <div class="thumbnail">
-	        <img th:src="'/' + ${event.eventImage}" th:alt="${event.eventName}"/>
-            <div class="caption">
-              <h3 th:text="${event.eventName}"></h3>
-              <p>A description</p>
-              <p><a th:href="'/beginPurchase?eventId=' + ${event.id}" class="btn btn-primary" role="button">Purchase</a> <a href="#" class="btn btn-default" role="button">More Info</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+
+    <h2>Sweet!  <span th:text="'You\'re going to ' + ${event.eventName}"></span></h2>
     
 	<hr/><br/>
     <div class="container">
