--- a/src/main/resources/templates/beginPurchase.html
+++ b/src/main/resources/templates/beginPurchase.html
@@ -15,6 +15,15 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script th:inline="javascript">
+    /*<![CDATA[*/
+      var pricePerTicket = [[${event.faceValue}]];
+      function updateTotalPrice() {
+    	var totalPrice = "$" + ( $('#numberOfTickets').val() * pricePerTicket);
+    	$('#totalPrice').text(totalPrice);
+      }
+    /*]]>*/
+    </script>
 </head>
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -51,12 +60,8 @@
     <div class="panel panel-default">
       <div class="panel-body">
       <div class="form-group">
-        <label for="inputEmail1">Email address</label>
-        <input type="email" class="form-control" id="inputEmail1" aria-describedby="emailHelp" placeholder="Enter email"/>
-      </div>
-      <div class="form-group">
-        <label for="inputPassword1">Password</label>
-        <input type="password" class="form-control" id="inputPassword1" placeholder="Password"/>
+        <label for="numberOfTickets"><span th:text="'How many tickets would you like? (Up to ' + ${event.ticketsRemaining} +')'"></span></label>
+        <input type="number" class="form-control" th:field="${purchase.numberOfTickets}" placeholder="2" min="1" th:max="${event.ticketsRemaining}" step="1" onchange="updateTotalPrice()"/>
       </div>
       <!-- Div to enter card information -->
       <div class="panel-body">
@@ -72,7 +77,7 @@
         <!-- Enter new card info -->
       </div>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Submit</button> <span id="totalPrice">$0.00</span>
       </div>
     </div>
     </form>
