--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -16,7 +16,10 @@
     <![endif]-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 </head>
-<body>
+<body ng-app="app" ng-controller="home as home">
+<script type="text/javascript" scr="/facebooknav.js"></script>
+    <script type="text/javascript" src="/webjars/angularjs/angular.min.js"></script>
+	<script type="text/javascript" src="/facebooknavswitch.js"></script>
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -26,18 +29,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Last Call</a>
+          <a class="navbar-brand" href="#">Last Call</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control"/>
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control"/>
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+          <ul class="nav navbar-nav navbar-right" ng-show="home.authenticated">
+      		<li><a href="/profile"><span class="glyphicon glyphicon-user" th:text="${userName}">Some User</span></a></li>
+    	  </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
@@ -51,8 +48,9 @@
 	        <img th:src="'/' + ${event.eventImage}" th:alt="${event.eventName}"/>
             <div class="caption">
               <h3 th:text="${event.eventName}"></h3>
-              <p>A description</p>
-              <p><a th:href="'/beginPurchase?eventId=' + ${event.id}" class="btn btn-primary" role="button">Purchase</a> <a href="#" class="btn btn-default" role="button">More Info</a></p>
+              <p><span th:text="${event.shortDescription}"></span></p>
+              <p th:if="${event.ticketsRemaining > 0}"><a th:href="'/beginPurchase?eventId=' + ${event.id}" class="btn btn-primary" role="button">Purchase</a> <span class="badge" th:text="${event.ticketsRemaining}"></span></p>
+              <p th:if="${event.ticketsRemaining == 0}"><a href="#" class="btn btn-primary disabled" role="button">No Tickets Available</a> <span class="badge" th:text="${event.ticketsRemaining}"></span></p>
             </div>
           </div>
         </div>
