Updating the team page with pictures and corrected layout

--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -48,40 +48,34 @@
 	  <div class="row">
 	    <div class="col-sm-6 col-md-4">
 	      <div class="thumbnail">
-	        <img src="../static/images/rich.png" alt="Rich Hill"/>
+	        <img src="../team/Rich.jpg" alt="Rich Hill"/>
             <div class="caption">
               <h3>Rich Hill</h3>
               <p>Rich is an Enterprise Architect at Vantiv. This is his second year participating in the Tidal ArtsWave hackathon. He enjoys trying new things and eating the foods.</p>
             </div>
           </div>
         </div>
-      </div>
-	  <div class="row">
-	    <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4">
 	      <div class="thumbnail">
-	        <img src="../static/images/gary.png" alt="Gary Usleaman"/>
+	        <img src="../team/Gary.jpg" alt="Gary Usleaman"/>
             <div class="caption">
               <h3>Gary Usleaman</h3>
               <p>Gary is an Security Architect at Vantiv. This is his first year participating in the Tidal ArtsWave hackathon. He enjoys beards and eating the foods.</p>
             </div>
           </div>
         </div>
-      </div>
-	  <div class="row">
-	    <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4">
 	      <div class="thumbnail">
-	        <img src="../static/images/pravin.png" alt="Pravin Kumarappan"/>
+	        <img src="../team/Pravin.jpg" alt="Pravin Kumarappan"/>
             <div class="caption">
               <h3>Pravin Kumarappan</h3>
-              <p>Pravin is an IT Engineer at Vantiv in the Future Leaders Development Program. This is his first year participating in the Tidal ArtsWave hackathon. He enjoys things.</p>
+              <p>Pravin is an IT Engineer at Vantiv in the Future Leaders Development Program. This is his first year participating in the Tidal ArtsWave hackathon. He enjoys being awesome.</p>
             </div>
           </div>
         </div>
-      </div>
-	  <div class="row">
-	    <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4">
 	      <div class="thumbnail">
-	        <img src="../static/images/nicky.png" alt="Nicky Schardt"/>
+	        <img src="../team/Nicky.jpg" alt="Nicky Schardt"/>
             <div class="caption">
               <h3>Nicky Schardt</h3>
               <p>Nicky is a Senior Leader in the Product division at Vantiv. This is her first year participating in the Tidal ArtsWave hackathon. She enjoys things.</p>
