--- a/src/main/resources/templates/organizations.html
+++ b/src/main/resources/templates/organizations.html
@@ -46,48 +46,17 @@
 
 	<div class="container">
 	  <div class="row">
-	    <div class="col-sm-6 col-md-5" th:each="organization : ${organizations}">
+	    <div class="col-sm-6 col-md-4" th:each="organization : ${organizations}" >
 	      <div class="thumbnail">
-<!-- 	        <img src="../static/MamLuft.png" />
- -->	        <div class="caption">
+	        <img th:src="'/' + ${organization.venueImage}" height="250"/>
+	       <div class="caption">
               <h3 th:text="${organization.venueName}"></h3>
-            </div>
-          </div>
+           </div>
+	       </div>
         </div>
       </div>
       </div>
-	  <!-- <div class="row">
-	    <div class="col-sm-6 col-md-5">
-	      <div class="thumbnail">
-	        <img src="../static/images/NrityapanaSchoolofPerformingArts.png" />
-	        <div class="caption">
-              <h3 th:text="${venue.venueName}"></h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-	    <div class="col-sm-6 col-md-5">
-	      <div class="thumbnail">
-	        <img src="../static/images/NrityapanaSchoolofPerformingArts.png" />
-	        <div class="caption">
-              <h3 th:text="${venue.venueName}"></h3>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-	    <div class="col-sm-6 col-md-5">
-	      <div class="thumbnail">
-	        <img src="../static/images/NrityapanaSchoolofPerformingArts.png" />
-	        <div class="caption">
-              <h3 th:text="${venue.venueName}"></h3>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    
+      
 	<hr/><br/>
     <div class="container">
       <footer><p>&copy; 2017 Vantiv</p></footer>
