--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right" ng-show="home.authenticated">
-      		<li><a href="/profile"><span class="glyphicon glyphicon-user" th:text="${userName}">Some User</span></a></li>
+      		<li><a href="/profile"><span class="glyphicon glyphicon-user" th:text="${session.user.name}" th:unless="${session == null}">Some User</span></a></li>
     	  </ul>
         </div><!--/.navbar-collapse -->
       </div>
