--- a/src/main/resources/templates/events.html
+++ b/src/main/resources/templates/events.html
@@ -20,7 +20,8 @@
 <script type="text/javascript" scr="/facebooknav.js"></script>
     <script type="text/javascript" src="/webjars/angularjs/angular.min.js"></script>
 	<script type="text/javascript" src="/facebooknavswitch.js"></script>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+	
+	<nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -33,12 +34,12 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right" ng-show="home.authenticated">
-      		<li><a href="/profile"><span class="glyphicon glyphicon-user" th:text="${userName}">Some User</span></a></li>
+      		<li><a href="/profile"><span class="glyphicon glyphicon-user" th:text="${session.user.name}" th:unless="${session == null}">Some User</span></a></li>
     	  </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-
+	
 	<br/><br/><br/><br/><br/><br/>
 
 	<div class="container">
