--- a/src/main/resources/templates/team.html
+++ b/src/main/resources/templates/team.html
@@ -26,18 +26,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Last Call</a>
+          <a class="navbar-brand" href="#">Last Call</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control"/>
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control"/>
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
+          <ul class="nav navbar-nav navbar-right" ng-show="home.authenticated">
+      		<li><a href="/profile"><span class="glyphicon glyphicon-user" th:text="${session.user.name}" th:unless="${session == null}">Some User</span></a></li>
+    	  </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
