--- a/src/main/resources/templates/organizations.html
+++ b/src/main/resources/templates/organizations.html
@@ -26,7 +26,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Last Call</a>
+          <a class="navbar-brand" href="/">Last Call</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right" ng-show="home.authenticated">
